update: buttons hided

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <div class="items">
             
-            <div class="prev"></div>
-            <div class="next"></div>
+            <!-- <div class="prev"></div>
+            <div class="next"></div> -->
         </div>
     </div>
 
